Fix footer link visibility with brighter gray colors

--- a/_sass/content.scss
+++ b/_sass/content.scss
@@ -219,7 +219,7 @@ h2.block-title {
   margin: 20px;
   padding: 20px;
   font-size: 14px;
-  color: #333333;
+  color: #999999;
   font-family: $monospace;
   text-align: center;
   background-color: $terminal-bg;
@@ -228,7 +228,7 @@ h2.block-title {
 }
 
 .footer > a {
-  color: #1a1a1a;
+  color: #cccccc;
   text-decoration: none;
   
   &:hover {
